alignment and font issues

--- a/dev/public/includes/main.scss
+++ b/dev/public/includes/main.scss
@@ -15,6 +15,7 @@ body {
 
 body {
   margin: 0 0;
+  font-family: $main-font;
 }
 
 
@@ -55,7 +56,7 @@ h1 {
   height: 40px;
   cursor: pointer;
   position: relative;
-  -webkit-flex-direction: row;
+-webkit-flex-direction: row;
   flex-direction: row;
   align-items: center;
   justify-content: center;
@@ -182,13 +183,14 @@ ul.list-of-articles {
   p {
     margin: 0 2px 10px;
     color: $header-font-color;
-    font-weight: bold;
+    font-weight: lighter;
   }
   a {
     text-decoration: none;
   }
 }
 
+// unused ?
 .second-headers {
   text-align: center;
   p {
@@ -204,7 +206,8 @@ input#post-search {
 }
 
 .post-search-after {
-  font-size: 42px;
+  // font-size: 42px;
+  font-size: 34px;
   color: $header-font-color;
   cursor: pointer;
 }
@@ -215,4 +218,19 @@ input#post-search {
   color: $header-font-color;
   position: relative;
   top: 7px;
+}
+
+.post-search {
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.starter-tip#article-tip {
+  text-align: center;
+  margin: 0;
+}
+
+form#post-search-form {
+  margin-bottom: 5px;
 }
